天球、地面の表示

--- a/GameEngineTK/GameEngineTK.vcxproj
+++ b/GameEngineTK/GameEngineTK.vcxproj
@@ -193,6 +193,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <MeshContentTask Include="Assets\ball.FBX" />
     <MeshContentTask Include="Assets\ground_1m.FBX" />
     <MeshContentTask Include="Assets\skyDome.FBX" />
   </ItemGroup>
