--- a/GameEngineTK/GameEngineTK.vcxproj
+++ b/GameEngineTK/GameEngineTK.vcxproj
@@ -195,7 +195,9 @@
   <ItemGroup>
     <MeshContentTask Include="Assets\ball.FBX" />
     <MeshContentTask Include="Assets\ground_1m.FBX" />
+    <MeshContentTask Include="Assets\ground_200m.FBX" />
     <MeshContentTask Include="Assets\skyDome.FBX" />
+    <MeshContentTask Include="Assets\teaPot.FBX" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
