--- a/GameEngineTK/GameEngineTK.vcxproj
+++ b/GameEngineTK/GameEngineTK.vcxproj
@@ -197,6 +197,7 @@
     <MeshContentTask Include="Assets\ground_1m.FBX" />
     <MeshContentTask Include="Assets\ground_200m.FBX" />
     <MeshContentTask Include="Assets\skyDome.FBX" />
+    <MeshContentTask Include="Assets\tank.FBX" />
     <MeshContentTask Include="Assets\teaPot.FBX" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
