--- a/GameEngineTK/GameEngineTK.vcxproj.filters
+++ b/GameEngineTK/GameEngineTK.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="CollisionNode.h" />
+    <ClInclude Include="ModelEffect.h" />
+    <ClInclude Include="LandShape.h" />
+    <ClInclude Include="LandShapeData.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -31,6 +34,9 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="CollisionNode.cpp" />
+    <ClCompile Include="ModelEffect.cpp" />
+    <ClCompile Include="LandShape.cpp" />
+    <ClCompile Include="LandShapeData.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resource.rc" />
@@ -95,6 +101,9 @@
       <Filter>Assets</Filter>
     </MeshContentTask>
     <MeshContentTask Include="Assets\sphereNode.FBX">
+      <Filter>Assets</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\effect.FBX">
       <Filter>Assets</Filter>
     </MeshContentTask>
   </ItemGroup>
