--- a/GameEngineTK/GameEngineTK.vcxproj
+++ b/GameEngineTK/GameEngineTK.vcxproj
@@ -169,6 +169,9 @@
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="FollowCamera.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="LandShape.h" />
+    <ClInclude Include="LandShapeData.h" />
+    <ClInclude Include="ModelEffect.h" />
     <ClInclude Include="Obj3d.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
@@ -182,7 +185,10 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="FollowCamera.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="LandShape.cpp" />
+    <ClCompile Include="LandShapeData.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ModelEffect.cpp" />
     <ClCompile Include="Obj3d.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -210,6 +216,7 @@
     <MeshContentTask Include="Assets\ball.FBX" />
     <MeshContentTask Include="Assets\body.FBX" />
     <MeshContentTask Include="Assets\bodyPik.FBX" />
+    <MeshContentTask Include="Assets\effect.FBX" />
     <MeshContentTask Include="Assets\flowerPik.FBX" />
     <MeshContentTask Include="Assets\ground_1m.FBX" />
     <MeshContentTask Include="Assets\ground_200m.FBX" />
